--- a/sass/modules/_meanmenu.scss
+++ b/sass/modules/_meanmenu.scss
@@ -40,7 +40,7 @@ a.meanmenu-reveal {
 }
 .mean-container a.meanmenu-reveal span {
     display: block;
-    background: $primary-color;
+    background: $icon-color;
     height: 2px;
     margin-top: 5px;
 }
@@ -122,7 +122,7 @@ a.meanmenu-reveal {
     border-left: 1px solid #ebecee;
 }
 .mean-container .mean-nav ul li a.mean-expand:hover {
-    background: $primary-color;
+    background: $icon-color;
     color: #fff;
 }
 .mean-container .mean-push {
