--- a/sass/modules/slider/_slider-style-one.scss
+++ b/sass/modules/slider/_slider-style-one.scss
@@ -1,3 +1,15 @@
+.slider-container {
+  max-width: 1440px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  @include sm {
+    padding: 0 12px;
+  }
+  @include md {
+    padding: 0 12px;
+  }
+}
 .slider-area {
   // overflow: hidden;
   position: relative;
