--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -335,18 +335,7 @@ input:focus {
   }
 }
 
-.slider-container {
-  max-width: 1440px;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  @include sm {
-    padding: 0 12px;
-  }
-  @include md {
-    padding: 0 12px;
-  }
-}
+
 
 // certified video btn
 .certified {
